set instanse data base for Models

--- a/templates/admin/rubrics/add.twig
+++ b/templates/admin/rubrics/add.twig
@@ -8,6 +8,10 @@
 
 {% block labelPathName %}Rubrics{% endblock %}
 
+{% block alert %}
+    {% include 'alerts.twig' %}
+{% endblock %}
+
 {% block content %}
     <div uk-grid class="uk-child-width-1-1@s uk-child-width-1-1@l">
         <div>
