--- a/templates/admin/posts/index.twig
+++ b/templates/admin/posts/index.twig
@@ -39,8 +39,8 @@
                                 <td>{{ post.slug }}</td>
                                 <td>{{ post.created_at | date("d.m.Y") }}</td>
                                 <td>
-                                    <a href="{{ path_for('page.edit', {'id' : post.id}) }}"><span uk-icon="icon: file-edit"></span></a>&nbsp;
-                                    <a href="{{ path_for('page.delete', {'id' : post.id}) }}"><span uk-icon="icon: trash"></span></a>
+                                    <a href="{{ path_for('post.edit', {'id' : post.id}) }}"><span uk-icon="icon: file-edit"></span></a>&nbsp;
+                                    <a href="{{ path_for('post.delete', {'id' : post.id}) }}"><span uk-icon="icon: trash"></span></a>
                                 </td>
                             </tr>
                         {% endfor %}
