--- a/webpack/src/css/media.css
+++ b/webpack/src/css/media.css
@@ -1,4 +1,4 @@
-@media all and (max-width: 1367px) {
+/*@media all and (max-width: 1367px) {
 
 }
 
@@ -30,4 +30,4 @@
 
 @media all and (max-width: 320px) {
 
-}
+}*/
