added image posts

--- a/templates/admin/posts/add.twig
+++ b/templates/admin/posts/add.twig
@@ -49,6 +49,10 @@
 
                                     </div>
                                 </div>
+                                <div class="uk-margin">
+                                    <div class="img-container"></div>
+                                    <input type="hidden" name="image_id" value=""/>
+                                </div>
                             </div>
                         </div>
                         <button class="uk-button uk-button-primary">Add Post</button>
